kubernetes/longhorn.ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-realm: 'kubectl get -n longhorn-system secret/longhorn-basic-auth'
    nginx.ingress.kubernetes.io/auth-secret: longhorn-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: longhorn-letsencrypt
      hosts:
        - longhorn.con2.fi
  rules:
  - host: longhorn.con2.fi
    http:
      paths:
      - path: /
        backend:
          serviceName: longhorn-frontend
          servicePort: 80
